--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteRule %{HTTP_HOST} !test
-RewriteRule ^/(.*)$ /test/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} !test
+RewriteRule / /test/[R=301,L]
