--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,1 @@
-RewriteEngine On
-RewriteCond %{HTTP_HOST} !test
-RewriteRule ^(.*)$ /test/$1 [R=301,NC,L]
+RewriteRule ^old/(.*)$ /test/$1 [R=301,NC,L]
