--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 Options +FollowSymLinks
 RewriteEngine On
 RewriteCond %{HTTP_HOST} !test
-RewriteRule ^(.*)$ %{HTTP_HOST}/test/$1 [R=301,L]
+RewriteRule ^(.*)$ /test/$1 [R=301,L]
