--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,4 @@
 Options +FollowSymLinks
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !index.html
 RewriteCond %{REQUEST_FILENAME} !test
-RewriteRule ^(.*)$ /test/$1 [R=301,L]
+RewriteRule ^old/(.*)$ /test/$1 [R=301,L]
